--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "json5": "^2.1.0",
     "lowdb": "^1.0.0",
     "nanoid": "^2.1.1",
+    "nodemon": "^3.0.1",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-router": "^5.1.2",
@@ -23,7 +24,7 @@
     "react-spinners": "^0.6.1"
   },
   "scripts": {
-    "server": "node api/src/server.js",
+    "server": "nodemon api/src/server.js",
     "app": "parcel client/index.html --out-dir client/dist",
     "test-server": "jest api/tests"
   },
